--- a/index.html
+++ b/index.html
@@ -10,40 +10,43 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+
   </style>
 </head>
 <body>
 
-  <!-- Rating state start -->
-
-  How did we do?
-
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit
+<div class="main-container">
+  <img src="./images/icon-star.svg" alt="">
+  <p class="question">How did we do?</p>
+  <p class="comment"> Please let us know how we did with your support request. All feedback is appreciated 
+    to help us improve our offering!</p>
+  <div class="rate-container">
+    <button class="rate-button">1</button>
+    <button class="rate-button">2</button>
+    <button class="rate-button">3</button>
+    <button class="rate-button">4</button>
+    <button class="rate-button">5</button>
+  </div>
+  <button class="submit">Submit</button>
+</div>
 
   <!-- Rating state end -->
 
   <!-- Thank you state start -->
 
-  You selected <!-- Add rating here --> out of 5
-
+  <!-- You selected Add rating here out of 5 -->
+<!-- 
   Thank you!
 
   We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
+  don’t hesitate to get in touch! -->
 
   <!-- Thank you state end -->
 
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.instagram.com/valentinavargasp/">Valentina Vargas Patiño @valentinavargasp</a>.
   </div>
 </body>
 </html>
