--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="./styles.css"> 
+
   <title>Frontend Mentor | Interactive rating component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,7 +20,7 @@
 </head>
 <body>
 
-<div class="main-container">
+<main class="main-container">
   <img src="./images/icon-star.svg" alt="">
   <p class="question">How did we do?</p>
   <p class="comment"> Please let us know how we did with your support request. All feedback is appreciated 
@@ -28,7 +33,7 @@
     <button class="rate-button">5</button>
   </div>
   <button class="submit">Submit</button>
-</div>
+</main>
 
   <!-- Rating state end -->
 
@@ -48,5 +53,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://www.instagram.com/valentinavargasp/">Valentina Vargas Patiño @valentinavargasp</a>.
   </div>
+
+  <script src="./main.js"></script>
 </body>
 </html>
