--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 <body>
 
 <main class="main-container">
-  <img src="./images/icon-star.svg" alt="">
+  <div class="icon-container">  
+    <img src="./images/icon-star.svg" alt="">
+  </div>
   <p class="question">How did we do?</p>
   <p class="comment"> Please let us know how we did with your support request. All feedback is appreciated 
     to help us improve our offering!</p>
@@ -32,7 +34,7 @@
     <button class="rate-button">4</button>
     <button class="rate-button">5</button>
   </div>
-  <button class="submit">Submit</button>
+  <button class="submit">S U B M I T</button>
 </main>
 
   <!-- Rating state end -->
