Se terminan de organizar los estilos del main. Se agregan los estilos de la segunda pantalla. Se realiza todo el main.js el cual permite realizar la interacción entre los botones y las diferentes vistas

--- a/index.html
+++ b/index.html
@@ -28,16 +28,21 @@
   <p class="comment"> Please let us know how we did with your support request. All feedback is appreciated 
     to help us improve our offering!</p>
   <div class="rate-container">
-    <button class="rate-button">1</button>
-    <button class="rate-button">2</button>
-    <button class="rate-button">3</button>
-    <button class="rate-button">4</button>
-    <button class="rate-button">5</button>
+    <button class="rate-button score1">1</button>
+    <button class="rate-button score2">2</button>
+    <button class="rate-button score3">3</button>
+    <button class="rate-button score4">4</button>
+    <button class="rate-button score5">5</button>
   </div>
   <button class="submit">S U B M I T</button>
+
 </main>
 
+<div class="inactive thank-you-message">
+</div>
+
   <!-- Rating state end -->
+
 
   <!-- Thank you state start -->
 
